# llm-causal-mimicry-pilot

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
analysis/: mediation.py
data/: README.md  assemble.py  causal_400.json  spurious_forks_300.json
elicitation/: ELICITATION_EXAMPLES.txt  elicit.py
frequency/: count_freq.py
mimicry/: score_mimicry.py
notebooks/: causal_mimicry_final.ipynb  causal_mimicry_master.ipynb
references/: references.bib
relations/: relations.json
representation/: fit_lre.py
results/: README.md
scripts/: run_model.py  sync_results_from_drive.sh
src/causal_mimicry/: __init__.py  config.py  context.py  data.py  hidden.py  model.py  plotting.py  scoring.py  stats.py
src/causal_mimicry/stages/: __init__.py  stage1_direction.py  stage2_dose.py  stage3_controls.py  stage4_probes.py  stage5_wordorder.py  stage6_alignment.py  stage8_geometry.py
